# coding-challenges

./: .clang-format  .gitignore  12. Highly Divisible Triangle Number.py  14. Longest Collatz Sequence.py  CMakeLists.txt  google_style_guide.md  projects.md
01_hello_world/: main.cpp
02_age_next_year/: main.cpp
03_c_to_f/: main.cpp
04_interest_calculator/: main.cpp
05_circle_area_circumference/: main.cpp
06_bmi_calc/: main.cpp
07_max_two_ints/: main.cpp
08_min_max_avg_ints/: main.cpp
09_even_or_odd/: main.cpp
10_leap_year_checker/: main.cpp
11_grade_classifier/: main.cpp
12_simple_calculator/: main.cpp
13_multiplication_tables/: main.cpp
14_sum_of_natural_numbers/: main.cpp
15_factorial_with_loop/: main.cpp
16_factorial_with_recursion/: main.cpp
17_power_using_loop/: main.cpp
18_print_first_n_fibonacci/: main.cpp
19_check_if_prime_naive/: main.cpp
20_check_primes_up_to_n/: main.cpp
21_reverse_digits/: main.cpp
22_integer_palindrome_checker/: main.cpp
23_count_digits/: main.cpp
24_sum_of_digits/: main.cpp
25_guess_the_number_fixed/: main  main.cpp
26_guess_the_number_random/: main.cpp
27_menu_driven_unit_conversion/: main  main.cpp
28_basic_string_input_with_echo/: main  main.cpp
29_count_chars_in_string/: main
30_vowels_and_constonants/: main  main.cpp
31_string_upper_lower/: main  main.cpp
32_palindrome_checker/: main  main.cpp
33_word_frequency/: main  main.cpp  main1
34_password_strength_checker/: main
Python/: 1. Multiples of 3 or 5.py  10. Summation of Primes.py  12. Highly Divisible Triangle Number.py  12. [NOT OPTIMISED] Highly Divisible Triangle Number.py  12. [UNFINISHED] Highly Divisible Triangle Number.py  15. Lattice Paths.py  (+16 more)
c/: 001  (+5 more)
project-euler/cpp/: CMakeLists.txt
project-euler/cpp/01_multiples_of_3_or_5/: main
project-euler/cpp/02_even_fibonacci/: main  main.cpp
(+93 files in other folders)
